--- a/html/login/login.html
+++ b/html/login/login.html
@@ -9,7 +9,11 @@
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css"/>
     </noscript>
-
+    <style>
+        *{
+            font-family: "微软雅黑", Helvetica, sans-serif;
+        }
+    </style>
 
 </head>
 <body class="is-loading">
@@ -36,7 +40,10 @@
                 <input type="password" name="password1" id="password1" placeholder="请输入密码"/>
             </div>
             <div class="field">
-                <input type="text" name="captcha" id="captcha" placeholder="请输入验证码"/>
+                <input type="text" name="captcha" id="captcha" placeholder="请输入验证码" style="width:55%;display: inline-block"/>
+                <button style="width:40%;display: inline-block;vertical-align: middle" onclick="captcha_button(event)">
+                    发送验证码
+                </button>
             </div>
             <!-- <div class="field">
                 <input type="text" name="name" id="name" placeholder="Name" />
@@ -66,7 +73,8 @@
                 <input type="radio" id="robot_no" name="robot" /><label for="robot_no">No</label>
             </div> -->
             <ul class="actions">
-                <li><a href="#" class="button" onclick="form_submit()">确认</a></li>
+                <li><a href="#" class="button" onclick="form_submit()" style="background:rgb(255,153,102)">登录</a></li>
+                <li><a href="#" class="button" onclick="form_submit()">注册</a></li>
             </ul>
         </form>
         <hr/>
