--- a/html/login/login.html
+++ b/html/login/login.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="assets/css/main.css"/>
-    <noscript>
-        <link rel="stylesheet" href="assets/css/noscript.css"/>
-    </noscript>
+    <!--<noscript>-->
+        <!--<link rel="stylesheet" href="assets/css/noscript.css"/>-->
+    <!--</noscript>-->
     <style>
         * {
             font-family: "微软雅黑", Helvetica, sans-serif;
@@ -37,14 +37,15 @@
                 <input type="text" name="phone" id="phone" placeholder="请输入手机号"/>
             </div>
             <div class="field">
-                <input type="password" name="password1" id="password1" placeholder="请输入密码"/>
+                <input type="password" name="password" id="password" placeholder="请输入密码"/>
             </div>
             <div class="field">
                 <input type="text" name="captcha" id="captcha" placeholder="请输入验证码"
                        style="width:55%;display: inline-block"/>
-                <div style="width:40%;display: inline-block;vertical-align: middle;padding: 0" >
-                    <!--发送验证码-->
-                    <img width="100%" height="100%" src="http://localhost/project_4/weixin/index/captcha_get_png" onclick="this.src='http://localhost/project_4/weixin/index/captcha_get_png?'+ Math.random()" />
+
+                <div style="width:40%;display: inline-block;vertical-align: middle;padding: 0;margin: 0;">
+                    <img width="100%" src="http://localhost/project_4/weixin/index/captcha_get_png"
+                         onclick="this.src='http://localhost/project_4/weixin/index/captcha_get_png?'+ Math.random()"/>
                 </div>
                 <!--<img src="http://localhost/project_4/weixin/index/captcha_get_png" style="width:40%;display: inline-block;vertical-align: middle"/>-->
 
@@ -92,7 +93,33 @@
     //  todo 表单提交
     function form_submit() {
         var $form = $("#sign_form");
-        $form.submit();
+        var phone = $("#phone").val();
+        var password = $("#password").val();
+        var captcha = $("#captcha").val();
+
+        if ($form.valid()) {
+            $.ajax({
+//                url: "http://localhost/project_4/weixin/index/userLogin/phone/" + phone + ".json",
+                url: "http://localhost/project_4/weixin/index/userLogin_put_json",
+                type: 'put',
+                data: {
+                    phone: phone,
+                    password: password,
+                    captcha: captcha
+                },
+                dataType: 'json',
+                success: function (data) {
+                    console.log(data);
+                    if(data['isConfirm']){
+//                    跳转至主页
+                    location.href = "../index.html"
+                    }
+                },
+                error: function (data) {
+                    console.log(data);
+                }
+            })
+        }
         return false
     }
 
@@ -138,7 +165,6 @@
 
 
     $(function () {
-        form_check()
     })
 </script>
 
