--- a/html/login/goto.html
+++ b/html/login/goto.html
@@ -30,7 +30,7 @@
         <!--</header>-->
 
         <hr/>
-        <h2><span id="link_info">操作成功</span>，<span id="link_count">3</span> 秒后跳转页面...</h2>
+        <h2><span id="link_info">无效操作</span>，<span id="link_count"></span> 秒后跳转页面...</h2>
         <hr/>
 
 
@@ -57,36 +57,52 @@
 <script src="assets/js/jquery-1.12.0.min.js"></script>
 <script>
 
-    function goto_link(link, info) {
 
+    function jump_link(link, info, count){
+        $("#link_info").text(info);
+
+        timer = setInterval(function () { // 3 秒跳转倒计时
+            $("#link_count").text(count);
+            count -= 1;
+            if (count < 0) {
+                location.href = link;
+                localStorage.removeItem('link');
+                localStorage.removeItem('link_info');
+                clearInterval(timer);
+            }
+        }, 1000);
     }
-
     $(function () {
+
+        //php--->txt--->
+        // 静态的html
+        // 法律：名称、颁布、介绍、目录---->具体的章节----->
+        //交通法、机动车、驾驶证、
+        //搜索：1、基本信息：名称、颁布、介绍、目录
+        //     2、全文搜索：扣分
+
+        //导入：来源---->COPY下来------>有固定格式的EXCEL------>数据库
+        //自动方式
+
+        //数据库：法律---->目录----->具体的章节内容
+        //
 
         // 获取 goto
         // 获取 goto info
         // 清除 goto 和 goto_info
         // 跳转页面
 
-        if (link = JSON.parse(localStorage.link)) { // 获取 指向链接
-            var info = JSON.parse(localStorage.link_info); // 获取 跳转提示信息
-            $("#link_info").text(info);
-
-            timer = setInterval(function () { // 3 秒跳转倒计时
-                var count = $("#link_count").text();
-                count -= 1;
-                $("#link_count").text(count);
-                if (count == 0) {
-                    location.href = link;
-                    localStorage.removeItem('link');
-                    localStorage.removeItem('link_info');
-                    clearInterval(timer);
-                }
-            }, 1000);
-
+        console.log(localStorage.link);
+        if (localStorage.link) { // 获取 指向链接
+            link = JSON.parse(localStorage.link);
+            info = JSON.parse(localStorage.link_info); // 获取 跳转提示信息
+            jump_link(link, info, 3);
         } else {
-
+            // 直接通过 url 访问时提示无效操作
+            jump_link('./login.html', '无效操作', 3);
         }
+
+
     })
 </script>
 </body>
