--- a/html/login/login.html
+++ b/html/login/login.html
@@ -117,7 +117,7 @@
                         location.href = "./goto.html"
                     } else {
                         localStorage.link = JSON.stringify('./login.html');
-                        localStorage.link_info = JSON.stringify(data['info']); // todo 服务器发送错误信息
+                        localStorage.link_info = JSON.stringify(data['info']); // 接受服务器发送错误信息
                         location.href = "./goto.html"
                     }
                 },
