Weixin | 在主页判断用户是否登录 | user_login()

--- a/html/login/login.html
+++ b/html/login/login.html
@@ -90,6 +90,14 @@
 <script src="assets/js/messages_zh.js"></script>
 <script>
 
+    function getCookie(name) {
+        var arr, reg = new RegExp("(^| )" + name + "=([^;]*)(;|$)");
+        if (arr = document.cookie.match(reg))
+            return unescape(arr[2]);
+        else
+            return null;
+    }
+
     //  表单提交
     function form_submit() {
         var $form = $("#sign_form");
@@ -170,11 +178,24 @@
         });
     }
 
+    // 判断用户是否已经登录
+    function user_login() {
+        if (getCookie('userOnline')) { // 获取 cookie.userOnline
+            cookie = getCookie('userOnline');
+            console.log(cookie);
+            location.href = '../index.html';
+        } else {
+        }
+    }
+
 
     $(function () {
-        form_check();
 
-        // todo 已登录用户会直接跳转至主页
+        // 表单验证
+        form_check();
+        // 已登录用户会直接跳转至主页
+        user_login();
+
     })
 </script>
 
