并没有什么更新 | 除了注释

--- a/html/index.html
+++ b/html/index.html
@@ -190,6 +190,8 @@
 
 <!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.validate.js"></script>
+<script src="assets/js/messages_zh.js"></script>
 <script>
 
 
@@ -248,6 +250,17 @@
     function hide_user(){
         $("#user_info").text("").hide();
     }
+
+    // todo 提交车辆违法表单
+    function form_submit(){
+
+    }
+
+    // todo 车辆违法表单验证
+    function form_check(){
+
+    }
+
 
     $(function () {
         user_online();
