html | 身份证允许使用字母

--- a/html/login/index.html
+++ b/html/login/index.html
@@ -180,8 +180,7 @@
                 id_number: {
                     required: true,
                     minlength: 18,
-                    maxlength: 18,
-                    number: true
+                    maxlength: 18
                 }
             },
             messages: {
