Weixin | html | 代码细节调整

--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,7 @@
                             <a href="onecolumn.html">查询历史</a>
                             <a href="threecolumn.html">关于</a>
                             <a href="#" id="user_operation" onclick="user_operate(event)">登录</a>
-                            <a href="#" id="user_info">15880166508</a>
+                            <a href="#" id="user_info"></a>
                         </nav>
                     </header>
 
